reports/physical_chemistry/quantum_mechanics/variational_method_in_quantum_mechanics.err.log
Traceback (most recent call last):
  File "/Users/mmccull/opt/anaconda3/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/Users/mmccull/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/mmccull/opt/anaconda3/lib/python3.9/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/mmccull/opt/anaconda3/lib/python3.9/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/Users/mmccull/opt/anaconda3/lib/python3.9/asyncio/base_events.py", line 647, in run_until_complete
    return future.result()
  File "/Users/mmccull/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/Users/mmccull/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/mmccull/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
# to code this up we are going to set a=1
import numpy as np
a = 1.0
hbar = 1.0
m = 1.0

S = np.matrix([[1.0/30.0, 1.0/140.0],[1.0/140.0,1.0/630.0]])
H = np.matrix([[1.0/6.0,1.0/30.0],[1.0/30.0,1.0/105.0]])

e,v = np.linalg.eig(np.dot(np.linalg.inv(S),H))

print e
------------------

[0;36m  File [0;32m"/var/folders/td/dll8n_kj4vd0zxjm0xd9m7740000gq/T/ipykernel_19942/2067705898.py"[0;36m, line [0;32m12[0m
[0;31m    print e[0m
[0m          ^[0m
[0;31mSyntaxError[0m[0;31m:[0m Missing parentheses in call to 'print'. Did you mean print(e)?

SyntaxError: Missing parentheses in call to 'print'. Did you mean print(e)? (2067705898.py, line 12)

